hphp/hack/test/typecheck/deprecated_attr_too_many_args.php.exp
File "deprecated_attr_too_many_args.php", line 3, characters 3-14:
The attribute __Deprecated expects at most 2 arguments (Typing[4126])
