hphp/hack/test/typecheck/deprecated_attr_too_many_args.php
<?hh

<<__Deprecated('foo', 1, 2)>>
function f() {}
